# hola_axum2

./: Cargo.toml  rust-toolchain.toml
src/: main.rs
static/: index.html  motos.html  otros.html
