[package]
name = "hola_axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }

tiberius = { version = "0.12", features = ["chrono"] }
tokio-util = { version = "0.7", features = ["compat"] }
